# YetAnother2dCodeDecoder

./: BitStreamReader.h  CMakeLists.txt  Doxyfile  ExtFiniteField256.h  FiniteField.cpp  FiniteField.h  LICENSE  Matrix.h  Polynom.cpp  Polynom.h  QrDecoder.h  README.md  ReedSolomon.h  main.cpp  scanner.cpp  util.h
datamatrix_ref/: Sources.txt
qrcode_ref/: Sources.txt
src/: BitStreamReader.h  DataMatrixDecoder.cpp  DataMatrixDecoder.h  ExtFiniteField256.cpp  ExtFiniteField256.h  FiniteField.h  Matrix.h  Polynom.h  QrDecoder.cpp  QrDecoder.h  ReedSolomon.h  decoderexception.h  main_qrcode.cpp  main_reedsolomon.cpp  qrcodeexception.h  util.h
test/: test_datamatrix.cpp  test_finitefield.cpp  test_main.cpp  test_matrix.cpp  test_polynom.cpp  test_qrcode.cpp
